music-app (2.2ubuntu1) UNRELEASED; urgency=medium

  [ Victor Thompson ]
  * Fix SongsView album art for albums and genres (LP: #1477366)
  * Fix to allow the LibraryEmptyState to work again (LP: #1478162)
  * Fix typo in README.autopilot and clarify the instructions
  * Show all README files in QtCreator

  [ Andrew Hayzen ]
  * Fix for console errors when using the parent changed helpers

 -- Victor Thompson <victor.thompson@gmail.com>  Thu, 23 Jul 2015 21:08:38 -0500

music-app (2.2) vivid; urgency=medium
  [ Andrew Hayzen ]
  * Bump framework to 15.04
  
 -- Andrew Hayzen <ahayzen@gmail.com>  Sat, 27 Jun 2015 21:30:23 +0100

music-app (2.1) vivid; urgency=medium

  [ Andrew Hayzen ]
  * Fixes and add preloading compatibility to ColumnFlow.qml.
  * Only autoset the source due to queue count changes when the queue worker has completed.
  * Improve the way the currentIndex is restored so that there is less/no delay.
  * Delay urlhandler/content-hub calls until after walkthrough is complete. Fixes: https://bugs.launchpad.net/bugs/1438317.
  * Make SongsView and ArtistView adaptive. Fixes: https://bugs.launchpad.net/bugs/1436771.
  * Ensure dialogs are closed before popping a page. Fixes: https://bugs.launchpad.net/bugs/1435658.
  * Split content-hub, uri-handler and metrics into Helpers.
  * Split the NowPlaying page into NowPlaying, Queue and NowPlayingToolbar
  * Destroy dialog before popping page. Fixes: https://bugs.launchpad.net/bugs/1428450.
  * Move delegates into their own folder in components
  * Create generic MultiSelectListView.qml for handling multiselect
  * Do not allow LibraryEmptyState loader to be active if content-hub is running. Fixes: https://bugs.launchpad.net/bugs/1418366.
  * Move all Dialog components into their own files in components/Dialog.
  * Create common components for Play All, Queue All and Shuffle buttons within 'Views'.
  * Split EmptyStates into a page (for noMusic) and a component (for noPlaylists) and load in async.