@@ -281,7 +281,7 @@ MainView {
     property alias queueIndex: startupSettings.queueIndex
     property bool noMusic: allSongsModel.rowCount === 0 && allSongsModelModel.status === SongsModel.Ready && loadedUI
     property bool emptyState: noMusic && !firstRun && !contentHub.processing
-    property Page emptyPage: undefined
+    property Page emptyPage
 
     signal listItemSwiping(int i)
 
