@@ -8,6 +8,7 @@ music-app (2.2ubuntu1) UNRELEASED; urgency=medium
 
   [ Andrew Hayzen ]
   * Fix for console errors when using the parent changed helpers
+  * Add support for a content-hub source in both single and multiple selection modes (LP: #1357324)
 
  -- Victor Thompson <victor.thompson@gmail.com>  Thu, 23 Jul 2015 21:08:38 -0500
 
